Design: Fixes poor line wrapping of long stream names.
In continuation of #13250.
The previous PR shortened long stream names by use of ellipses, due to
which the edit button was not visible in case of too long stream name.

The edit button is now visible.

Further work: Configuring the method of editing long stream names, which
is a bit buggy right now.

--- a/static/styles/subscriptions.scss
+++ b/static/styles/subscriptions.scss
@@ -800,9 +800,17 @@ form#add_new_subscription {
             margin-left: -3px;
             padding-bottom: 5px;
             white-space: nowrap;
-            width: 270px;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            max-width: 20ch;
+            // width: 270px;
+           
+
+            .stream-name-editable {
+                display: block;
+                max-width: 25ch;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                float: left;
+            }
         }
 
         .deactivate,
